fix branding-title class (too wide)

--- a/app/assets/stylesheets/bootstrap_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_customization.css.scss
@@ -53,7 +53,7 @@ body{
   position:absolute; 
   top: 50px; 
   left: 170px; 
-  width:100vw; 
+  width:75vw; 
   font-size:48px;
   @include responsive-font(5vw, 8px, 48px, 48px);
   font-family:oswald; 
